Page scrolls down on submit to ensure that the loading icon isn't cut off when processing

--- a/res/css/index.css
+++ b/res/css/index.css
@@ -6740,4 +6740,9 @@ textarea.list-text-area, textarea.form-control.list-text-area {
 .tab-content {
   margin-top: 15px; }
 
+/* Helper classes */
+.body-padding {
+  width: 100%;
+  height: 100px; }
+
 /*# sourceMappingURL=index.css.map */
